--- a/frontend/inventario/src/i18n/locales/es/translation.json
+++ b/frontend/inventario/src/i18n/locales/es/translation.json
@@ -28,6 +28,16 @@
     "editSupplier": "Editar proveedor",
 
     "events": "Eventos",
+    "errorRemovingEvent": "Error al eliminar un evento",
+    "successRemovingEvent": "Evento eliminado correctamente",
+    "eventName": "Nombre",
+    "eventDate": "Fecha",
+    "eventDescription": "Descripción",
+    "eventActions": "Acciones",
+    "noEvents": "No hay eventos guardados",
+    "addEvent": "Añadir evento",
+    "editEvent": "Editar evento",
+
     "logOut": "Cerrar Sesión",
     "inventory": "Inventario"
 }
