--- a/frontend/inventario/src/i18n/locales/en/translation.json
+++ b/frontend/inventario/src/i18n/locales/en/translation.json
@@ -1,43 +1,48 @@
 {
-    "products": "Products",
-    "errorRemovingProduct": "Error removing a product",
-    "successRemovingProduct": "Product successfully removed",
-    "productName": "Name",
-    "productType": "Type",
-    "productStock": "Stock",
-    "productCost": "Cost(€)",
-    "productPrice": "Price(€)",
-    "productPVP": "P.V.P",
-    "productNotes": "Notes",
-    "productSupplier": "Supplier",
-    "productActions": "Actions",
-    "noProducts": "No saved products",
-    "addProduct": "Add product",
-    "addProductType": "Type of product",
-    "editProduct": "Edit product",
-    "saveChanges": "Save changes",
+  "products": "Products",
+  "errorRemovingProduct": "Error removing a product",
+  "successRemovingProduct": "Product successfully removed",
+  "productName": "Name",
+  "productType": "Type",
+  "productStock": "Stock",
+  "productCost": "Cost(€)",
+  "productPrice": "Price(€)",
+  "productPVP": "P.V.P",
+  "productNotes": "Notes",
+  "productSupplier": "Supplier",
+  "productActions": "Actions",
+  "noProducts": "No saved products",
+  "addProduct": "Add product",
+  "addProductType": "Type of product",
+  "editProduct": "Edit product",
+  "saveChanges": "Save changes",
 
-    "suppliers": "Suppliers",
-    "errorRemovingSupplier": "Error removing a supplier",
-    "successRemovingSupplier": "Supplier successfully removed",
-    "supplierName": "Name",
-    "supplierContact": "Contact",
-    "supplierActions": "Actions",
-    "noSuppliers": "No saved suppliers",
-    "addSupplier": "Add supplier",
-    "editSupplier": "Edit supplier",
+  "suppliers": "Suppliers",
+  "errorRemovingSupplier": "Error removing a supplier",
+  "successRemovingSupplier": "Supplier successfully removed",
+  "supplierName": "Name",
+  "supplierContact": "Contact",
+  "supplierActions": "Actions",
+  "noSuppliers": "No saved suppliers",
+  "addSupplier": "Add supplier",
+  "editSupplier": "Edit supplier",
 
-    "events": "Events",
-    "errorRemovingEvent": "Error removing an event",
-    "successRemovingEvent": "Event successfully removed",
-    "eventName": "Name",
-    "eventDate": "Date",
-    "eventDescription": "Description",
-    "eventActions": "Actions",
-    "noEvents": "No saved events",
-    "addEvent": "Add event",
-    "editEvent": "Edit event",
+  "events": "Events",
+  "errorRemovingEvent": "Error removing an event",
+  "successRemovingEvent": "Event successfully removed",
+  "eventName": "Name",
+  "eventDate": "Date",
+  "eventDescription": "Description",
+  "eventActions": "Actions",
+  "noEvents": "No saved events",
+  "addEvent": "Add event",
+  "editEvent": "Edit event",
 
-    "logOut": "Log Out",
-    "inventory": "Inventory"
+  "logOut": "Log Out",
+  "inventory": "Inventory",
+
+  "confirmRemoval": "Confirm removal",
+  "confirmDeleteText": "Are you sure you want to delete \"{{name}}\"?",
+  "cancel": "Cancel",
+  "delete": "Delete"
 }
