--- a/frontend/inventario/src/i18n/locales/es/translation.json
+++ b/frontend/inventario/src/i18n/locales/es/translation.json
@@ -1,43 +1,48 @@
 {
-    "products": "Productos",
-    "errorRemovingProduct": "Error al eliminar un producto",
-    "successRemovingProduct": "Producto elimiando correctamente",
-    "productName": "Nombre",
-    "productType": "Tipo",
-    "productStock": "Stock",
-    "productCost": "Coste(€)",
-    "productPrice": "Precio(€)",
-    "productPVP": "P.V.P",
-    "productNotes": "Notas",
-    "productSupplier": "Proveedor",
-    "productActions": "Acciones",
-    "noProducts": "No hay productos guardados",
-    "addProduct": "Añadir producto",
-    "addProductType": "Tipo de producto",
-    "editProduct": "Editar producto",
-    "saveChanges": "Guardar cambios",
+  "products": "Productos",
+  "errorRemovingProduct": "Error al eliminar un producto",
+  "successRemovingProduct": "Producto elimiando correctamente",
+  "productName": "Nombre",
+  "productType": "Tipo",
+  "productStock": "Stock",
+  "productCost": "Coste(€)",
+  "productPrice": "Precio(€)",
+  "productPVP": "P.V.P",
+  "productNotes": "Notas",
+  "productSupplier": "Proveedor",
+  "productActions": "Acciones",
+  "noProducts": "No hay productos guardados",
+  "addProduct": "Añadir producto",
+  "addProductType": "Tipo de producto",
+  "editProduct": "Editar producto",
+  "saveChanges": "Guardar cambios",
 
-    "suppliers": "Proveedores",
-    "errorRemovingSupplier": "Error al eliminar un proveedor",
-    "successRemovingSupplier": "Proveedor eliminado correctamente",
-    "supplierName": "Nombre",
-    "supplierContact": "Contacto",
-    "supplierActions": "Acciones",
-    "noSuppliers": "No hay proveedores guardados",
-    "addSupplier": "Añadir proveedor",
-    "editSupplier": "Editar proveedor",
+  "suppliers": "Proveedores",
+  "errorRemovingSupplier": "Error al eliminar un proveedor",
+  "successRemovingSupplier": "Proveedor eliminado correctamente",
+  "supplierName": "Nombre",
+  "supplierContact": "Contacto",
+  "supplierActions": "Acciones",
+  "noSuppliers": "No hay proveedores guardados",
+  "addSupplier": "Añadir proveedor",
+  "editSupplier": "Editar proveedor",
 
-    "events": "Eventos",
-    "errorRemovingEvent": "Error al eliminar un evento",
-    "successRemovingEvent": "Evento eliminado correctamente",
-    "eventName": "Nombre",
-    "eventDate": "Fecha",
-    "eventDescription": "Descripción",
-    "eventActions": "Acciones",
-    "noEvents": "No hay eventos guardados",
-    "addEvent": "Añadir evento",
-    "editEvent": "Editar evento",
+  "events": "Eventos",
+  "errorRemovingEvent": "Error al eliminar un evento",
+  "successRemovingEvent": "Evento eliminado correctamente",
+  "eventName": "Nombre",
+  "eventDate": "Fecha",
+  "eventDescription": "Descripción",
+  "eventActions": "Acciones",
+  "noEvents": "No hay eventos guardados",
+  "addEvent": "Añadir evento",
+  "editEvent": "Editar evento",
 
-    "logOut": "Cerrar Sesión",
-    "inventory": "Inventario"
+  "logOut": "Cerrar Sesión",
+  "inventory": "Inventario",
+
+  "confirmRemoval": "Confirmar eliminación",
+  "confirmDeleteText": "¿Estás seguro de que deseas eliminar \"{{name}}\"?",
+  "cancel": "Cancelar",
+  "delete": "Eliminar"
 }
