Add sale acabado

--- a/frontend/inventario/src/i18n/locales/en/translation.json
+++ b/frontend/inventario/src/i18n/locales/en/translation.json
@@ -56,5 +56,6 @@
   "saleShippingPrice": "Shipping price",
   "saleProfit": "Profit",
   "saleActions": "Actions",
-  "noSales": "No saved sales"
+  "noSales": "No saved sales",
+  "addSale": "Add sale"
 }
