--- a/frontend/inventario/src/i18n/locales/es/translation.json
+++ b/frontend/inventario/src/i18n/locales/es/translation.json
@@ -59,5 +59,7 @@
   "noSales": "No hay ventas guardadas",
   "addSale": "Añadir venta",
 
-   "lowStockAlert": "El producto {{productName}} tiene poco stock{{count}}"
+   "lowStockAlert": "El producto {{productName}} tiene poco stock{{count}}",
+
+   "calendar": "Calendario"
 }
